# zapret-checker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/: Makefile  sign.c  sign.h  test_sign  test_sign.c
lib/rutoken/: Common.h  rtpkcs11.h  rtpkcs11f.h  rtpkcs11t.h  win2nix.h  wintypes.h
src/: main.rs  vigruzki.rs
