[package]
name = "zapret-checker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4"}
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
yaserde = { version = "0.10.0", features = ["yaserde_derive"] }
yaserde_derive = "0.10.0"
